--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,13 @@ h3 {
     font-size: 20px;
 }
 
+h4 {
+    text-align: center;
+    margin-bottom: 10px;
+    font-weight: bold;
+    font-size: 16px;
+}
+
 #seo {
     color: #d9dcd6;
 }
