--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ h4 {
     text-align: center;
     margin-bottom: 10px;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 1.17em;
 }
 
 #seo {
